--- a/Chynayeu90331/Views/Shared/_Layout.cshtml
+++ b/Chynayeu90331/Views/Shared/_Layout.cshtml
@@ -14,37 +14,15 @@
             <!-- Панель навигации -->
             <nav class="navbar navbar-expand-md navbar-dark bg-dark">
                 <!-- меню сайта -->
-                <a class="navbar-brand" href="#">803247</a>
+                <a class="navbar-brand" asp-action="Index" asp-controller="Home">803247</a>
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" asp-controller="Home" asp-action="Index">Лаб 2</a>
-                    <a class="nav-item nav-link" asp-controller="Product" asp-action="Index">Каталог</a>
-                    <a class="nav-item nav-link" asp-area="Admin" asp-page="/Index">Администрирование</a>
+                    @await Component.InvokeAsync("Menu")
                 </div>
                 <!-- меню сайта - конец -->
                 <!-- Информация пользователя -->
-                <a asp-controller="Cart" asp-action="Index" class="navbar-text ml-auto">
-                    00,0 руб <i class="fas fa-shopping-cart nav-color"></i> (0)
-                </a>
-                <div class="dropdown ml-4 nav-color">
-                    <div class="dropdown-toggle" id="dropdownMenuButton"
-                         data-toggle="dropdown" aria-haspopup="true"
-                         aria-expanded="false">
-                        <img src="images/avatar.jpg" width="30"
-                             alt="User" class="rounded" />
-                    </div>
-                    <div class="dropdown-menu"
-                         aria-labelledby="dropdownMenuButton">
-                        <div class="dropdown-item-text">
-                            <img src="images/avatar.jpg" width="50"
-                                 alt="User" class="rounded" />
-                            user@mail.ru
-                        </div>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" asp-controller="Cart" asp-action="Index">Мои товары</a>
-                        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout">Log off</a>
-                    </div>
-                </div>
+                <partial name="_UserPartial" />
                 <!-- Информация пользователя - конец -->
+
             </nav> <!-- Панель навигации - конец -->
         </div><!-- container - конец -->
     </header><!-- header - конец -->
