--- a/Chynayeu90331/Views/Shared/_UserPartial.cshtml
+++ b/Chynayeu90331/Views/Shared/_UserPartial.cshtml
@@ -9,14 +9,12 @@
         <div class="dropdown-toggle" id="dropdownMenuButton"
              data-toggle="dropdown" aria-haspopup="true"
              aria-expanded="false">
-            <img src="images/avatar.jpg" width="30"
-                 alt="User" class="rounded" />
+            <img src="@Url.Action("GetAvatar","Image")" width="30" alt="User" class="rounded bg-light" />
         </div>
         <div class="dropdown-menu"
              aria-labelledby="dropdownMenuButton">
             <div class="dropdown-item-text">
-                <img src="images/avatar.jpg" width="50"
-                     alt="User" class="rounded" />
+                <img src="@Url.Action("GetAvatar","Image")" width="50" alt="User" class="rounded" />
                 @User.Identity.Name
 
             </div>
