--- a/Chynayeu90331/Views/_ViewImports.cshtml
+++ b/Chynayeu90331/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Chynayeu90331
 @using Chynayeu90331.Models
+@using Chynayeu90331.DAL.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
