Лабораторная 7. Тэг-хелперы. Ajax. Маршрутизация

--- a/Chynayeu90331/Views/_ViewImports.cshtml
+++ b/Chynayeu90331/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using Chynayeu90331.Models
 @using Chynayeu90331.DAL.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper " Chynayeu90331.TagHelpers.*, Chynayeu90331"
