--- a/Chynayeu90331/Views/Product/Index.cshtml
+++ b/Chynayeu90331/Views/Product/Index.cshtml
@@ -37,12 +37,11 @@
                 }
             </div>
         </div>
-    </div> <div class="col-10">
-        <div class="card-deck">
-            @foreach (var item in Model)
-            {
-                <partial name="_ListItemPartial" model="@item" />
-            }
-        </div>
+    </div> 
+    <div class="col-10">
+    <div class="card-group" id="list">
+        <partial name="_ListPartial" model="@Model" />
     </div>
+    <pager page-current="@Model.CurrentPage" page-total="@Model.TotalPages" action="Index" controller="Product" group-id="@currentGroup"></pager>
+</div>
 </div>
