--- a/Chynayeu90331/Views/Shared/_UserPartial.cshtml
+++ b/Chynayeu90331/Views/Shared/_UserPartial.cshtml
@@ -6,17 +6,14 @@
 {
     @await Component.InvokeAsync("Cart")
     <div class="dropdown ml-4 nav-color">
-        <div class="dropdown-toggle" id="dropdownMenuButton"
-             data-toggle="dropdown" aria-haspopup="true"
-             aria-expanded="false">
-            <img src="@Url.Action("GetAvatar","Image")" width="30" alt="User" class="rounded bg-light" />
+        <div class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img img-action="GetAvatar" img-controller="Image" width="30" alt="User" class="rounded bg-light" />
         </div>
         <div class="dropdown-menu"
              aria-labelledby="dropdownMenuButton">
             <div class="dropdown-item-text">
-                <img src="@Url.Action("GetAvatar","Image")" width="50" alt="User" class="rounded" />
+                <img img-action="GetAvatar" img-controller="Image" width="30" alt="User" class="rounded bg-light" />
                 @User.Identity.Name
-
             </div>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" asp-controller="Cart" asp-action="Index">Мои товары</a>
